vbnc/vbnc/tests/Errors/30124.vb
Public Class Test
    Property Foo1() As Boolean
        Get
            Return True
        End Get
    End Property
End Class